trying to fix sdkmanager